--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="es" class="scroll-smooth">
 <head>
   <meta charset="utf-8">
-  <title>Boda Raquel Y Jose</title>
+  <title>Boda Raquel y Jose</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
